# LBMPostels

./: .gitignore  CMakeLists.txt
.devcontainer/: devcontainer.json
src/: CMakeLists.txt  constants.h  cuda_utils.h  grid.hpp  lattice.h  lbm.h  lbm_cpu.h  lbm_gpu.cuh  main.cpp  main.cu  types.h  vtk.h
src/vtkwriter/: vtk.cpp  vtk.hpp
